--- a/android/WisperoGW/app/src/main/res/values/strings.xml
+++ b/android/WisperoGW/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WisperoGW</string>
+    <string name="app_name">Wispero</string>
     <string name="gcm_send_message">GCM enabled.</string>
     <string name="registering_message">Generating InstanceID token...</string>
     <string name="token_error_message">An error occurred while either fetching the InstanceID token,
